--- a/Compiled/index.html
+++ b/Compiled/index.html
@@ -7,29 +7,12 @@
     <meta name="description" content="Идеология организации бизнес-процессов, направленная на исключение производственных потерь, которые являются причиной брака и увеличением издержек">
     <link rel="icon" href="https://gubinvs.ru/favicon.svg" type="image/svg+xml">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="canonical" href="">
+    <link rel="canonical" href=""><!-- . -->
     <title>Внедрение идеологии бережливого производства, систематизация и стандартизация бизнес-процессов</title>
-    <!-- Yandex.Metrika counter -->
-<script type="text/javascript" >
-  (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
-  m[i].l=1*new Date();
-  for (var j = 0; j < document.scripts.length; j++) {if (document.scripts[j].src === r) { return; }}
-  k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
-  (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
-
-  ym(90236291, "init", {
-       clickmap:true,
-       trackLinks:true,
-       accurateTrackBounce:true,
-       webvisor:true
-  });
-</script>
-<noscript><div><img src="https://mc.yandex.ru/watch/90236291" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
-<!-- /Yandex.Metrika counter -->
   </head>
   <body>
     <header class="header-section">
-      <div class="container header-section__container"><a class="logo-block" href="https://gubinvs.ru/lean/"><picture><source srcset="img/nav-logo__img.webp" type="image/webp"><img class="logo-img" src="img/nav-logo__img.png" alt="Логотип"></picture>
+      <div class="container header-section__container"><a class="logo-block" href="https://gubinvs.ru/lean/"><img class="logo-img" src="../img/nav-logo__img.png" alt="Логотип">
           <div class="logo-border"></div>
           <div class="logo-title">Менеджмент</div></a>
         <nav class="nav-header-list"> <a class="nav-header-list__item" href="index.html">СМК</a><a class="nav-header-list__item" href="labor.html">СУОТ</a><a class="nav-header-list__item" href="supply.html">СУСиЗ</a></nav>
@@ -87,7 +70,7 @@
           </div>
         </div>
       </section>
-      <section class="index-audit-section"><picture><source srcset="img/index-page/audit__img.webp" type="image/webp"><img class="index-audit-section__img" src="img/index-page/audit__img.png" alt="Карта пропуск для посещения"></picture>
+      <section class="index-audit-section"><img class="index-audit-section__img" src="../../img/index-page/audit__img.png" alt="Карта пропуск для посещения">
         <div class="content-block content-block-ias">
           <div class="title-block title-block-ias">
             <div class="title-block__line-left title-block__line-left_ias"></div>
@@ -96,7 +79,7 @@
         </div>
         <div class="container">
           <div class="discription-block index-audit-section__discription-block">
-            <div class="discription-block__icon-list"><img class="discription-block__icon-item" src="img/index-page/audit-block-content__item1.svg" alt="Иконка с изображением структуры компании"><img class="discription-block__icon-item" src="img/index-page/audit-block-content__item2.svg" alt="Иконка с прицелом на личность"><img class="discription-block__icon-item" src="img/index-page/audit-block-content__item3.svg" alt="Иконка с окном браузера и шестеренкой для настройки"></div>
+            <div class="discription-block__icon-list"><img class="discription-block__icon-item" src="../../img/index-page/audit-block-content__item1.svg" alt="Иконка с изображением структуры компании"><img class="discription-block__icon-item" src="../../img/index-page/audit-block-content__item2.svg" alt="Иконка с прицелом на личность"><img class="discription-block__icon-item" src="../../img/index-page/audit-block-content__item3.svg" alt="Иконка с окном браузера и шестеренкой для настройки"></div>
             <div class="discription-block__content">
               <div class="content__title">Аудит существующих бизнес-процессов</div>
               <div class="content__discr content__discr_ias">На время становимся частью вашей команды, изучаем как выстроены бизнес-процессы, выявляем проблемные места и разрабатываем план изменений.</div>
@@ -109,7 +92,7 @@
         </div>
         <div class="red-line__text">Дорожная карта</div>
       </section>
-      <section class="index-audit-section index-regulation-section"><picture><source srcset="img/index-page/standart-block-content__img.webp" type="image/webp"><img class="index-audit-section__img index-regulation-section__img" src="img/index-page/standart-block-content__img.png" alt="Стопка книг со стандартами предприятия"></picture>
+      <section class="index-audit-section index-regulation-section"><img class="index-audit-section__img index-regulation-section__img" src="../../img/index-page/standart-block-content__img.png" alt="Стопка книг со стандартами предприятия">
         <div class="content-block content-block-irs">
           <div class="title-block title-block_index-regulation-section">
             <div class="title-block__title title-block__title_irs">Регламентируем</div>
@@ -135,7 +118,7 @@
         </div>
         <div class="red-line__text red-line__text_regulation-section">Стандартизация</div>
       </section>
-      <section class="index-audit-section index-adaptation-section"><picture><source srcset="img/index-page/adaptation__img.webp" type="image/webp"><img class="index-audit-section__img index-adaptation-section__img" src="img/index-page/adaptation__img.png" alt="Молодые ребята и девчата с книгами в охабку радуются будущим знаниям"></picture>
+      <section class="index-audit-section index-adaptation-section"><img class="index-audit-section__img index-adaptation-section__img" src="../../img/index-page/adaptation__img.png" alt="Молодые ребята и девчата с книгами в охабку радуются будущим знаниям">
         <div class="content-block">
           <div class="title-block index-adaptation-section__title-block">
             <div class="title-block__line-left title-block__line-left_iadsec"></div>
@@ -167,16 +150,16 @@
         </div>
         <div class="container">
           <div class="index-task-block">  
-            <div class="index-task-card"> <img class="index-task-card__icon" src="img/index-page/task-icon_1.svg" alt="Силует человека с увеличительным стеклом">
+            <div class="index-task-card"> <img class="index-task-card__icon" src="../../img/index-page/task-icon_1.svg" alt="Силует человека с увеличительным стеклом">
               <div class="index-task-card__content">Обеспечиваем соответствие <br> ГОСТ Р ИСО 9001-2015</div>
             </div>
-            <div class="index-task-card"> <img class="index-task-card__icon" src="img/index-page/task-icon_3.svg" alt="Силует человека с книгой в руках">
+            <div class="index-task-card"> <img class="index-task-card__icon" src="../../img/index-page/task-icon_3.svg" alt="Силует человека с книгой в руках">
               <div class="index-task-card__content">Обеспечиваем стабильное качество выпускаемой продукции</div>
             </div>
-            <div class="index-task-card"> <img class="index-task-card__icon" src="img/index-page/task-icon_2.svg" alt="Веселый смайлик">
+            <div class="index-task-card"> <img class="index-task-card__icon" src="../../img/index-page/task-icon_2.svg" alt="Веселый смайлик">
               <div class="index-task-card__content">Увеличиваем количество довольных клиентов</div>
             </div>
-            <div class="index-task-card"> <img class="index-task-card__icon" src="img/index-page/task-icon_4.svg" alt="Силуэты нескольких людей плечем к плечу">
+            <div class="index-task-card"> <img class="index-task-card__icon" src="../../img/index-page/task-icon_4.svg" alt="Силуэты нескольких людей плечем к плечу">
               <div class="index-task-card__content">Притягиваем сотрудников с высокими компетенциями</div>
             </div>
           </div>
@@ -186,7 +169,7 @@
               <div class="case-block-card__action">
                 <div class="action__title">Сделали</div>
                 <div class="action__discr">Внедрили систему входного контроля сырья, маркировку его по результатам контроля, а при не соответствии входных параметров помещение сырья в изолятор брака.</div>
-              </div><img class="case-block-card__icon" src="img/index-page/case-card-icon.svg" alt="стрелка в круглешке направлением направо">
+              </div><img class="case-block-card__icon" src="../../img/index-page/case-card-icon.svg" alt="стрелка в круглешке направлением направо">
               <div class="case-block-card__result">
                 <div class="result__title">Результат</div>
                 <div class="result__discr">Исключили использование сырья и комплектующих несоответсвующих заданным параметрам, получили стабильное качество выпускаемой продукции.</div>
@@ -196,7 +179,7 @@
               <div class="case-block-card__action">
                 <div class="action__title">Сделали</div>
                 <div class="action__discr">Внедрили систему неснижаемого запаса сырья и материалов, применив инструмент бережливого производства - вытягивание со склада.</div>
-              </div><img class="case-block-card__icon" src="img/index-page/case-card-icon.svg" alt="стрелка в круглешке направлением направо">
+              </div><img class="case-block-card__icon" src="../../img/index-page/case-card-icon.svg" alt="стрелка в круглешке направлением направо">
               <div class="case-block-card__result">
                 <div class="result__title">Результат</div>
                 <div class="result__discr">Обеспечили соблюдение сроков выпускаемой продукции, за счет своевременного наличия на сладах необходимого сырья, материалов и комплектующих.</div>
@@ -206,7 +189,7 @@
               <div class="case-block-card__action">
                 <div class="action__title">Сделали</div>
                 <div class="action__discr">Внедрили систему горизонтальной ротации кадров, персонал осваивал смежные профессии, работая на разных производственных участках.</div>
-              </div><img class="case-block-card__icon" src="img/index-page/case-card-icon.svg" alt="стрелка в круглешке направлением направо">
+              </div><img class="case-block-card__icon" src="../../img/index-page/case-card-icon.svg" alt="стрелка в круглешке направлением направо">
               <div class="case-block-card__result">
                 <div class="result__title">Результат</div>
                 <div class="result__discr">Обеспечили ретмичность циклов производства, за счет исключения случаев простоя производственных участков из-за отсутствия персонала.</div>
@@ -229,7 +212,7 @@
           <div class="request-section__img-block">
             <div class="request-section__img-block_border"></div>
             <picture>
-              <source srcset="img/supply-page/request-section__img_1024.jpg" media="(max-width: 1024px)"><img class="request-section__img-block" src="img/supply-page/request-section__img.jpg" alt="Мужчина и женьщина ведут переговоры с потенциальным клиентом">
+              <source srcset="../../img/supply-page/request-section__img_1024.jpg" media="(max-width: 1024px)"><img class="request-section__img-block" src="../../img/supply-page/request-section__img.jpg" alt="Мужчина и женьщина ведут переговоры с потенциальным клиентом">
             </picture>
             <div class="request-section__img-block_border"></div>
           </div>
@@ -251,13 +234,13 @@
           <div class="footer-contact-list"> 
             <div class="footer-contact__title">Контакты:</div>
             <div class="footer-contact__item">Тел: +7 (812) 921-59-71</div>
-            <div class="social-block-list"><a class="social-block-list__icon" href="https://t.me/gubinvs"><img src="img/supply-page/icons_telegram.svg" alt="Иконка телеграмм"></a><a class="social-block-list__icon" href="https://vk.com/club220708521"> <img src="img/supply-page/icons_vkontakte.svg" alt="Иконка вконтакте"></a><a class="social-block-list__icon" href="mailto:gubinvs@gmail.com"> <img src="img/supply-page/icons_mail.svg" alt="Иконка электронной почты"></a></div><a href="https://gubinvs.ru/pp-page.html"> 
+            <div class="social-block-list"><a class="social-block-list__icon" href="https://t.me/gubinvs"><img src="../../img/supply-page/icons_telegram.svg" alt="Иконка телеграмм"></a><a class="social-block-list__icon" href="https://vk.com/club220708521"> <img src="../../img/supply-page/icons_vkontakte.svg" alt="Иконка вконтакте"></a><a class="social-block-list__icon" href="mailto:gubinvs@gmail.com"> <img src="../../img/supply-page/icons_mail.svg" alt="Иконка электронной почты"></a></div><a href="https://gubinvs.ru/pp-page.html"> 
               <div class="pp-page">Политика в отношении<br> обработки персональных данных</div></a>
           </div>
         </div>
       </div>
     </footer>
-    <script src="js/app.js?_v=20230720143520"></script>
-    <script src="js/modules/burger-action.js?_v=20230720143520"></script>
+    <script src="js/app.js"></script>
+    <script src="js/modules/burger-action.js"></script>
   </body>
 </html>
