--- a/Compiled/messageok.html
+++ b/Compiled/messageok.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Уведомление об удачном отправлении сообщении с сайта">
     <link rel="icon" href="https://gubinvs.ru/favicon.svg" type="image/svg+xml">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="canonical" href="">
+    <link rel="canonical" href=""><!-- . -->
     <title>Ваше сообщение удачно отправлено</title>
   </head>
   <body>
