--- a/Compiled/bid.html
+++ b/Compiled/bid.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="https://gubinvs.ru/favicon.svg" type="image/svg+xml">
     <link rel="stylesheet" href="css/style.css">
     <link rel="canonical">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css?_v=20220807133642">
     <title>Бриф на разработку сайта</title>
   </head>
   <body>
