--- a/Compiled/labor.html
+++ b/Compiled/labor.html
@@ -7,29 +7,12 @@
     <meta name="description" content="Внедрение системы управления охраной труда на предприятии">
     <link rel="icon" href="https://gubinvs.ru/favicon.svg" type="image/svg+xml">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="canonical" href="">
+    <link rel="canonical" href=""><!-- . -->
     <title>Система управления охраной труда (СУОТ)</title>
-    <!-- Yandex.Metrika counter -->
-<script type="text/javascript" >
-  (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
-  m[i].l=1*new Date();
-  for (var j = 0; j < document.scripts.length; j++) {if (document.scripts[j].src === r) { return; }}
-  k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
-  (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
-
-  ym(90236291, "init", {
-       clickmap:true,
-       trackLinks:true,
-       accurateTrackBounce:true,
-       webvisor:true
-  });
-</script>
-<noscript><div><img src="https://mc.yandex.ru/watch/90236291" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
-<!-- /Yandex.Metrika counter -->
   </head>
   <body>
     <header class="header-section">
-      <div class="container header-section__container"><a class="logo-block" href="https://gubinvs.ru/lean/"><picture><source srcset="img/nav-logo__img.webp" type="image/webp"><img class="logo-img" src="img/nav-logo__img.png" alt="Логотип"></picture>
+      <div class="container header-section__container"><a class="logo-block" href="https://gubinvs.ru/lean/"><img class="logo-img" src="../img/nav-logo__img.png" alt="Логотип">
           <div class="logo-border"></div>
           <div class="logo-title">Менеджмент</div></a>
         <nav class="nav-header-list"> <a class="nav-header-list__item" href="index.html">СМК</a><a class="nav-header-list__item" href="labor.html">СУОТ</a><a class="nav-header-list__item" href="supply.html">СУСиЗ</a></nav>
@@ -56,7 +39,7 @@
               <button class="lms-title-block__button" onclick="document.location='index.html'">Узнать подробнее ...</button>
             </div>
           </div>
-          <div class="lms-right-block"><picture><source srcset="img/labor-page/ss-img-gerl.webp" type="image/webp"><img class="lms-right-block__img" src="img/labor-page/ss-img-gerl.png" alt="Приятная девушка в очках мило улыбается вам"></picture>
+          <div class="lms-right-block"><img class="lms-right-block__img" src="../../img/labor-page/ss-img-gerl.png" alt="Приятная девушка в очках мило улыбается вам">
             <div class="windows-phone-block">
               <div class="windows-phone-block__code-sity">+7 (812)</div>
               <div class="windows-phone-block__numder-list">
@@ -130,11 +113,11 @@
           <h2 class="labor-control-section__title">Контроль функционирования СУОТ</h2>
           <div class="labor-control-section__discr">С целью соблюдения условий на рабочих местах, дисциплины персонала, соответствия производственного процесса принятым стандартам и нормативным актам.</div>
           <div class="labor-control-section__slogan labor-control-section__slogan_light">КУРИРУЕМ 3-Х СТУПЕНЧАТУЮ</div>
-          <div class="labor-control-section__slogan">СИСТЕМУ КОНТРОЛЯ ФУНКЦИОНИРОВАНИЯ СУОТ</div><picture><source srcset="img/labor-page/labor-control-section__img.webp" type="image/webp"><img class="labor-control-section__img" src="img/labor-page/labor-control-section__img.png" alt="Инспектор девушка проверяет по чек-листу"></picture>
+          <div class="labor-control-section__slogan">СИСТЕМУ КОНТРОЛЯ ФУНКЦИОНИРОВАНИЯ СУОТ</div><img class="labor-control-section__img" src="../../img/labor-page/labor-control-section__img.png" alt="Инспектор девушка проверяет по чек-листу">
         </div>
         <div class="container labor-control-section__card-block"> 
           <div class="card-lcs">
-            <div class="card-lcs__bady"><img class="card-lcs__icon" src="img/labor-page/card-lcs-icon.svg" alt="Иконка планшета с чек листом">
+            <div class="card-lcs__bady"><img class="card-lcs__icon" src="../../img/labor-page/card-lcs-icon.svg" alt="Иконка планшета с чек листом">
               <div class="card-lcs__title">Реализуется на уровне производственного участка</div>
               <div class="card-lcs__discr">Прорабы, механики, бригадиры проводят проверку исправности оборудования, приспособлений, инструмента, наличия средств защиты  перед работой и в течение рабочего дня</div>
             </div>
@@ -143,7 +126,7 @@
             </div>
           </div>
           <div class="card-lcs">
-            <div class="card-lcs__bady"><img class="card-lcs__icon" src="img/labor-page/card-lcs-icon.svg" alt="Иконка планшета с чек листом">
+            <div class="card-lcs__bady"><img class="card-lcs__icon" src="../../img/labor-page/card-lcs-icon.svg" alt="Иконка планшета с чек листом">
               <div class="card-lcs__title">Реализуется на уровне руководителя отдела</div>
               <div class="card-lcs__discr">Проводят проверки реализации первой ступени контроля, проверяют состояние рабочих мест на предмет защищенности от вредных факторов, состояние бытовых и производственных помещений.</div>
             </div>
@@ -152,7 +135,7 @@
             </div>
           </div>
           <div class="card-lcs">
-            <div class="card-lcs__bady"><img class="card-lcs__icon" src="img/labor-page/card-lcs-icon.svg" alt="Иконка планшета с чек листом">
+            <div class="card-lcs__bady"><img class="card-lcs__icon" src="../../img/labor-page/card-lcs-icon.svg" alt="Иконка планшета с чек листом">
               <div class="card-lcs__title">Реализуется комиссией в составе руководителей</div>
               <div class="card-lcs__discr">Проводят проверки надлежащего выполнения мероприятий предусмотренных I и II ступенями, исполнение требований нормативной документации по ОТ в Обществе.</div>
             </div>
@@ -204,13 +187,13 @@
           <div class="footer-contact-list"> 
             <div class="footer-contact__title">Контакты:</div>
             <div class="footer-contact__item">Тел: +7 (812) 921-59-71</div>
-            <div class="social-block-list"><a class="social-block-list__icon" href="https://t.me/gubinvs"><img src="img/supply-page/icons_telegram.svg" alt="Иконка телеграмм"></a><a class="social-block-list__icon" href="https://vk.com/club220708521"> <img src="img/supply-page/icons_vkontakte.svg" alt="Иконка вконтакте"></a><a class="social-block-list__icon" href="mailto:gubinvs@gmail.com"> <img src="img/supply-page/icons_mail.svg" alt="Иконка электронной почты"></a></div><a href="https://gubinvs.ru/pp-page.html"> 
+            <div class="social-block-list"><a class="social-block-list__icon" href="https://t.me/gubinvs"><img src="../../img/supply-page/icons_telegram.svg" alt="Иконка телеграмм"></a><a class="social-block-list__icon" href="https://vk.com/club220708521"> <img src="../../img/supply-page/icons_vkontakte.svg" alt="Иконка вконтакте"></a><a class="social-block-list__icon" href="mailto:gubinvs@gmail.com"> <img src="../../img/supply-page/icons_mail.svg" alt="Иконка электронной почты"></a></div><a href="https://gubinvs.ru/pp-page.html"> 
               <div class="pp-page">Политика в отношении<br> обработки персональных данных</div></a>
           </div>
         </div>
       </div>
     </footer>
-    <script src="js/app.js?_v=20230720143520"></script>
-    <script src="js/modules/burger-action.js?_v=20230720143520"></script>
+    <script src="js/app.js"></script>
+    <script src="js/modules/burger-action.js"></script>
   </body>
 </html>
