--- a/Compiled/supply.html
+++ b/Compiled/supply.html
@@ -7,29 +7,12 @@
     <meta name="description" content="Берем на себя обязанность по обеспечению потребности в материалах и комплектующих, анализируем цены на рынке, формируем и отправляем заявки на закупку поставщикам. Контролируем сроки поставок и ведем учет движения материалов.">
     <link rel="icon" href="https://gubinvs.ru/favicon.svg" type="image/svg+xml">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="canonical" href="">
+    <link rel="canonical" href=""><!-- . -->
     <title>Агентство закупочных процедур</title>
-    <!-- Yandex.Metrika counter -->
-    <script type="text/javascript" >
-      (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
-      m[i].l=1*new Date();
-      for (var j = 0; j < document.scripts.length; j++) {if (document.scripts[j].src === r) { return; }}
-      k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
-      (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
-
-      ym(90236291, "init", {
-          clickmap:true,
-          trackLinks:true,
-          accurateTrackBounce:true,
-          webvisor:true
-      });
-    </script>
-<noscript><div><img src="https://mc.yandex.ru/watch/90236291" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
-<!-- /Yandex.Metrika counter -->
   </head>
   <body>
     <header class="header-section">
-      <div class="container header-section__container"><a class="logo-block" href="https://gubinvs.ru/lean/"><picture><source srcset="img/nav-logo__img.webp" type="image/webp"><img class="logo-img" src="img/nav-logo__img.png" alt="Логотип"></picture>
+      <div class="container header-section__container"><a class="logo-block" href="https://gubinvs.ru/lean/"><img class="logo-img" src="../img/nav-logo__img.png" alt="Логотип">
           <div class="logo-border"></div>
           <div class="logo-title">Менеджмент</div></a>
         <nav class="nav-header-list"> <a class="nav-header-list__item" href="index.html">СМК</a><a class="nav-header-list__item" href="labor.html">СУОТ</a><a class="nav-header-list__item" href="supply.html">СУСиЗ</a></nav>
@@ -88,10 +71,10 @@
       <section>
         <div class="supply-blocktop-img">
           <picture>
-            <source srcset="img/supply-page/section-img_big-img_1024.jpg" media="(max-width: 1024px)"><img class="supply-blocktop-img__big-img" src="img/supply-page/section-img_big-img_1280.jpg" alt="Просторный склад с аккрутно напоненными стеллажами и поддонами с мешками на полу. Все очень чисто и аккуратно штабелировано">
+            <source srcset="../img/supply-page/section-img_big-img_1024.jpg" media="(max-width: 1024px)"><img class="supply-blocktop-img__big-img" src="../img/supply-page/section-img_big-img_1280.jpg" alt="Просторный склад с аккрутно напоненными стеллажами и поддонами с мешками на полу. Все очень чисто и аккуратно штабелировано">
           </picture>
           <picture>
-            <source srcset="img/supply-page/section-img_mini-img_1024.jpg" media="(max-width: 1024px)"><img class="supply-blocktop-img__mini-img" src="img/supply-page/section-img_mini-img_1280.jpg" alt="Все тот же аккуратный склад но с детальным приближением одной из ячеек на которой аккуратно уложены коробки">
+            <source srcset="../img/supply-page/section-img_mini-img_1024.jpg" media="(max-width: 1024px)"><img class="supply-blocktop-img__mini-img" src="../img/supply-page/section-img_mini-img_1280.jpg" alt="Все тот же аккуратный склад но с детальным приближением одной из ячеек на которой аккуратно уложены коробки">
           </picture>
         </div>
         <div class="container">
@@ -118,7 +101,7 @@
           <div class="supply-accounting-section__block-img"> 
             <div class="sas-block-img__border"></div>
             <picture>
-              <source srcset="img/supply-page/iMac_1280.png" media="(max-width: 1280px)"><img class="sas-block-img__img" src="img/supply-page/iMac.png" alt="Компьютер с программой 1с на мониторе">
+              <source srcset="../img/supply-page/iMac_1280.png" media="(max-width: 1280px)"><img class="sas-block-img__img" src="../img/supply-page/iMac.png" alt="Компьютер с программой 1с на мониторе">
             </picture>
           </div>
           <div class="supply-accounting-section__block-content">
@@ -223,7 +206,7 @@
           <div class="request-section__img-block">
             <div class="request-section__img-block_border"></div>
             <picture>
-              <source srcset="img/supply-page/request-section__img_1024.jpg" media="(max-width: 1024px)"><img class="request-section__img-block" src="img/supply-page/request-section__img.jpg" alt="Мужчина и женьщина ведут переговоры с потенциальным клиентом">
+              <source srcset="../../img/supply-page/request-section__img_1024.jpg" media="(max-width: 1024px)"><img class="request-section__img-block" src="../../img/supply-page/request-section__img.jpg" alt="Мужчина и женьщина ведут переговоры с потенциальным клиентом">
             </picture>
             <div class="request-section__img-block_border"></div>
           </div>
@@ -245,13 +228,13 @@
           <div class="footer-contact-list"> 
             <div class="footer-contact__title">Контакты:</div>
             <div class="footer-contact__item">Тел: +7 (812) 921-59-71</div>
-            <div class="social-block-list"><a class="social-block-list__icon" href="https://t.me/gubinvs"><img src="img/supply-page/icons_telegram.svg" alt="Иконка телеграмм"></a><a class="social-block-list__icon" href="https://vk.com/club220708521"> <img src="img/supply-page/icons_vkontakte.svg" alt="Иконка вконтакте"></a><a class="social-block-list__icon" href="mailto:gubinvs@gmail.com"> <img src="img/supply-page/icons_mail.svg" alt="Иконка электронной почты"></a></div><a href="https://gubinvs.ru/pp-page.html"> 
+            <div class="social-block-list"><a class="social-block-list__icon" href="https://t.me/gubinvs"><img src="../../img/supply-page/icons_telegram.svg" alt="Иконка телеграмм"></a><a class="social-block-list__icon" href="https://vk.com/club220708521"> <img src="../../img/supply-page/icons_vkontakte.svg" alt="Иконка вконтакте"></a><a class="social-block-list__icon" href="mailto:gubinvs@gmail.com"> <img src="../../img/supply-page/icons_mail.svg" alt="Иконка электронной почты"></a></div><a href="https://gubinvs.ru/pp-page.html"> 
               <div class="pp-page">Политика в отношении<br> обработки персональных данных</div></a>
           </div>
         </div>
       </div>
     </footer>
-    <script src="js/app.js?_v=20230720143520"></script>
-    <script src="js/modules/burger-action.js?_v=20230720143520"></script>
+    <script src="js/app.js"></script>
+    <script src="js/modules/burger-action.js"></script>
   </body>
 </html>
